fix z-index header in angular

--- a/packages/devextreme-schematics/src/add-layout/files/src/app/shared/components/header/header.component.scss
+++ b/packages/devextreme-schematics/src/add-layout/files/src/app/shared/components/header/header.component.scss
@@ -1,6 +1,6 @@
 :host {
   flex: 0 0 auto;
-  z-index: 1505;
+  z-index: 1;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
